# openraft-surrealkv

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  build.rs  config.toml.example
.docker/: Dockerfile  Dockerfile.multi  docker-compose.yml  entrypoint.sh  openraft-surrealkv-deployment.yaml
.docker/alertmanager/: alertmanager.yml
.docker/grafana/: openraft_alert_rules.yaml  openraft_dashboard.json  os.json
.docker/prometheus/: prometheus.yml
.github/: copilot-instructions.md
.github/workflows/: Build.yml  audit.yml  comment-style.yml  docs.yml  rust-clippy.yml
benchs/: benchmark.lua
docs/: PHASE_ROADMAP.md  USAGE_GUIDE.md  USAGE_GUIDE_CN.md
examples/: 3nodes-local.sh  phase4_merge_demo.rs
proto/: raft.proto
scripts/: benchmark.sh  deploy_local_docker.sh  doc_comment_verb_scan.sh  start_cluster.sh  test_api.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  merge.rs  raft_adapter.rs  shutdown.rs  snapshot.rs  state.rs  storage.rs  storage_raft_impl.rs  types.rs
src/api/: handlers.rs  middleware.rs  mod.rs  server.rs
src/merge/: checkpoint_backend.rs  cleanup.rs  error_codes.rs  executor.rs  policy.rs
src/metrics/: api.rs  exporter.rs  mod.rs  raft.rs  storage.rs
src/network/: client.rs  mod.rs  server.rs
src/proto/: mod.rs  raft.rs
src/snapshot/: checkpoint.rs  compression.rs  consistency.rs  delta.rs  metadata.rs  restore.rs
tests/: cluster_observability.rs  cluster_test.rs  delta_snapshot.rs  merge_e2e.rs  merge_executor.rs  merge_policy.rs  merge_recovery.rs  network_integration.rs  snapshot_compression_bench.rs  snapshot_logging.rs  snapshot_restore_bench.rs  stress_test.rs
tests/common/: cluster_harness.rs
