[package]
name = "openraft-surrealkv"
version = "0.0.2"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/houseme/openraft-surrealkv"
rust-version = "1.93"
documentation = "https://docs.rs/openraft-surrealkv"
homepage = "https://houseme.github.io/openraft-surrealkv"
readme = "README.md"
description = "A simple key-value store built on top of OpenRaft, designed for learning and experimentation with Raft consensus algorithm."
keywords = ["raft", "surrealkv", "consensus", "openraft", "distributed-systems"]
categories = ["algorithms", "asynchronous", "data-structures", "database-implementations"]
build = "build.rs"

# Use the version 3 feature resolver for better feature unification in workspace
resolver = "3"

[features]
default = []
# Enables heavy multi-node integration tests
integration-cluster = []

[dependencies]
# --- Core Raft & Storage ---
openraft = { version = "0.10.0-alpha.15", features = ["serde", "tracing-log"] }
surrealkv = "0.21.0"

# --- Async Runtime & Utilities ---
async-trait = "0.1.89"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1.18"
tower = { version = "0.5", features = ["timeout"] }

# --- Serialization & Error Handling ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
postcard = { version = "1.1", features = ["use-std"] }
anyhow = "1.0.102"
toml = "1.0.6"
bytes = { version = "1.11.1", features = ["serde"] }

# --- RPC (gRPC) ---
prost = "0.14"
tonic = { version = "0.14.5", features = ["transport", "server", "tls-aws-lc"] }
tonic-prost = "0.14.5"

# --- Web Server (HTTP) ---
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-full"] }

# --- Observability (Logging & Metrics) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"

# --- Utilities ---
uuid = { version = "1.22", features = ["v4"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }
astral-tokio-tar = "0.5.6"
crc-fast = "1.9.0"
clap = { version = "4.5.61", features = ["derive", "env"] }
base64 = "0.22"


[build-dependencies]
# Used for compiling Protocol Buffers
tonic-prost-build = "0.14.5"

[dev-dependencies]
# --- Testing Utilities ---
openraft = { version = "0.10.0-alpha.15", features = ["tracing-log"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.26.0"
tracing-test = "0.2.6"
serial_test = "3.4"
temp-env = "0.3.6"

[package.metadata.cargo-shear]
ignored = ["bytes"]
